shift/static/styles.css
@font-face {
  font-family: 'Typo';
  src: url('fonts/Typo_Round_Regular_Demo.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
}



body {
  overflow: hidden;
  margin: 0%;
  display: flex;
  flex-direction: column;
  font-family: 'Typo', sans-serif;
  font-style: italic;
  background-color: #66A182;
}

.box {
  background-color: #3C3C3C;
  height: 160px;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.title {
  margin-right: 5%;
  margin-left: 5%;
  cursor: default;
  position: relative;

  font-size: 130px;
  font-style: italic;

  color: #FFF;
}

.btn {
  color: #FFF;
  transition: all 0.3s;
  position: relative;
  right: 0;
  line-height: 40px;
  height: 40px;
  text-align: center;
  width: 200px;
  cursor: pointer;
  margin-right: 16px;
  text-decoration: none;
}

.btn::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  transition: all 0.3s;
  border: 1px solid rgba(255, 255, 255, 0.2);
  background-color: rgba(255, 255, 255, 0.1);
}
.btn::after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  transition: all 0.3s;
  border: 1px solid rgba(255, 255, 255, 0.2);
  background-color: rgba(255, 255, 255, 0.1);
}
.btn:hover {
  letter-spacing: 2px;
  transition: all 0.3s;
}
.btn:hover::before {
  transform: rotate(-5deg);
  background-color: rgba(255, 255, 255, 0.05);
}
.btn:hover::after {
  transform: rotate(5deg);
  background-color: rgba(255, 255, 255, 0.05);
}


form {
  width: 400px;
  margin: 5% auto;
  padding: 20px;
  background-color: #222222;
  border-radius: 15px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
}
input[type="text"],
input[type="password"] {
  width: 90%;
  padding: 4%;
  margin: 5% 0;
  border: 1px solid white;
  background-color: #3C3C3C;
  border-radius: 5px;
  color: white;
}
input[type="submit"] {
  background-color: #3C3C3C;
  color: white;
  border: none;
  padding: 10px 10px;
  font-size: 16px;
  border-radius: 5px;
  cursor: pointer;
  margin: 5%;
  width: 60%;
}
input[type="submit"]:hover {
  background-color: #C17171;
}


.container {
  background-color: #66A182;
  color: white;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.new-shift {
  background-color: #3C3C3C;
  color: white;
  position: absolute;
  left: 17%;
/*  margin-right: 60%;*/
  margin-bottom: 740px;
  width: 100px;
  height: 100px;
  font-size: 110px;
  font-style: normal;
  border-radius: 26px;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  text-decoration: none;
}
.post-container {
  background-color: #66A182;
  border-left: 8px solid #3C3C3C;
  color: white;
  position: relative;
  width: 50%;
  height: 900px;
}
.shift-post {
  background-color: #3C3C3C;
  color: white;
  padding: 5%;
  flex-direction: column;
  text-align: left;
  margin: 4%;
  width: auto;
  height: auto;
  font-size: 20px;
  font-style: normal;
  border-radius: 26px;
  display: flex;
  justify-content: center;
  text-decoration: none;
}

